--- a/website/css/style.css
+++ b/website/css/style.css
@@ -51,13 +51,13 @@ and open the template in the editor.
 #buttons button {
   width: 150px; }
 
-#raisedbutton{
+/*#raisedbutton{*/
 
-  position: absolute;
+  /*position: absolute;*/
 
-  top: -10000px;
-  left: -10000px;
-}
+  /*top: -10000px;*/
+  /*left: -10000px;*/
+/*}*/
 
 
 /*# sourceMappingURL=style.css.map */
