--- a/website/css/style.css
+++ b/website/css/style.css
@@ -59,5 +59,17 @@ and open the template in the editor.
   /*left: -10000px;*/
 /*}*/
 
+#formLogin {
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  flex-wrap: wrap;
+  width: 300px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row
+
+}
+
 
 /*# sourceMappingURL=style.css.map */
